--- a/190819_edgeR_CaT_Seq.Rmd
+++ b/190819_edgeR_CaT_Seq.Rmd
@@ -21,6 +21,37 @@ library(calibrate)
 ```{r}
 sessionInfo()
 ```
+R version 3.4.3 (2017-11-30)
+Platform: x86_64-apple-darwin15.6.0 (64-bit)
+Running under: macOS High Sierra 10.13.6
+
+Matrix products: default
+BLAS: /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libBLAS.dylib
+LAPACK: /Library/Frameworks/R.framework/Versions/3.4/Resources/lib/libRlapack.dylib
+
+locale:
+[1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
+
+attached base packages:
+[1] stats     graphics  grDevices utils     datasets  methods   base     
+
+other attached packages:
+[1] calibrate_1.7.2 MASS_7.3-51.4   biomaRt_2.34.2  edgeR_3.20.9    limma_3.34.9   
+
+loaded via a namespace (and not attached):
+ [1] httr_1.4.0                 Biobase_2.38.0             bit64_0.9-7                splines_3.4.3              Formula_1.2-3              assertthat_0.2.1           stats4_3.4.3              
+ [8] latticeExtra_0.6-28        blob_1.1.1                 GenomeInfoDbData_1.0.0     progress_1.2.2             yaml_2.2.0                 pillar_1.4.1               RSQLite_2.1.1             
+[15] backports_1.1.4            lattice_0.20-38            glue_1.3.1                 digest_0.6.19              GenomicRanges_1.30.3       RColorBrewer_1.1-2         XVector_0.18.0            
+[22] checkmate_1.9.3            colorspace_1.4-1           htmltools_0.3.6            Matrix_1.2-17              DESeq2_1.18.1              XML_3.98-1.20              pkgconfig_2.0.2           
+[29] genefilter_1.60.0          zlibbioc_1.24.0            purrr_0.3.2                xtable_1.8-4               scales_1.0.0               BiocParallel_1.12.0        htmlTable_1.13.1          
+[36] tibble_2.1.3               annotate_1.56.2            IRanges_2.12.0             ggplot2_3.2.0              SummarizedExperiment_1.8.1 nnet_7.3-12                BiocGenerics_0.24.0       
+[43] lazyeval_0.2.2             survival_2.44-1.1          magrittr_1.5               crayon_1.3.4               memoise_1.1.0              foreign_0.8-71             prettyunits_1.0.2         
+[50] tools_3.4.3                data.table_1.12.0          hms_0.4.2                  matrixStats_0.54.0         stringr_1.4.0              S4Vectors_0.16.0           munsell_0.5.0             
+[57] locfit_1.5-9.1             cluster_2.0.7-1            DelayedArray_0.4.1         AnnotationDbi_1.40.0       compiler_3.4.3             GenomeInfoDb_1.14.0        rlang_0.3.4               
+[64] grid_3.4.3                 RCurl_1.95-4.12            rstudioapi_0.10            htmlwidgets_1.3            bitops_1.0-6               base64enc_0.1-3            gtable_0.3.0              
+[71] DBI_1.0.0                  R6_2.4.0                   gridExtra_2.3              knitr_1.23                 dplyr_0.8.1                bit_1.1-14                 Hmisc_4.2-0               
+[78] stringi_1.4.3              parallel_3.4.3             Rcpp_1.0.1                 geneplotter_1.56.0         rpart_4.1-15               acepack_1.4.1              tidyselect_0.2.5          
+[85] xfun_0.7                  
 
 ####Load data:
 ```{r}
@@ -440,153 +471,277 @@ text(PCA_norm$x[,3],PCA_norm$x[,4],labels=colnames(fit_lncFARED6$fitted.values),
 
 #Volcano plots
 
+####lncFARED1 volcano:
 ```{r}
-#volcano plot for lncFARED1 dataset
-par(pty="s")
-vp=results_lncFARED1_SS
-with(vp, plot(logFC, -log10(FDR), pch=20, cex=0.3,main = 'lncFARED1'))
-with(subset(vp, logFC>1 & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="red"))
-with(subset(vp, logFC<(-1) & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="blue"))
+#import revious analysis results
+results_lncFARED1 = read.delim("~/Desktop/190426_lncFARED1_edgeR_DEG.tsv", row.names = 1, header = TRUE)
 ```
 
 ```{r}
-#Save a pdf of the volcano plot
-setwd("~/Desktop")
-pdf("190806_lncFARED1_volcano.pdf", height=2.5, width=2.5)
-par(pty="s") 
-par(mar=c(2,2,2,2))
-vp=results_lncFARED1_SS
-with(vp, plot(logFC, -log10(FDR), pch=20, cex=0.3,main = 'lncFARED1', axes=FALSE))
-axis(side=2, at=c(0,150,300))
-axis(side=1, at=c(-5,0,5,10))
-with(subset(vp, logFC>1 & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="red"))
-with(subset(vp, logFC<(-1) & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="blue"))
-print(vp, newpage = FALSE)
-dev.off()
-```
+# set values outside axis limits to Inf
+#upper_FDR_limit = 10^(-15)
+upper_FDR_limit = 10
+upper_logFC_limit = 6
+lower_logFC_limit = -6
 
+results_lncFARED1_limits = results_lncFARED1
+results_lncFARED1_limits$logFDR = -log10(results_lncFARED1_limits$FDR)
+results_lncFARED1_limits$logFDR[results_lncFARED1_limits$logFDR > upper_FDR_limit] = Inf
 
-```{r}
-#volcano plot for MSTRG.28468 dataset
-par(pty="s") 
-vp=results_lncFARED2_SS
-with(vp, plot(logFC, -log10(FDR), pch=20, cex=0.3,main = 'lncFARED2'))
-with(subset(vp, logFC>1 & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="red"))
-with(subset(vp, logFC<(-1) & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="blue"))
-```
-```{r}
-#Save a pdf of the volcano plot
-setwd("~/Desktop")
-pdf("190806_lncFARED2_volcano.pdf", height=2.5, width=2.5)
-par(pty="s") 
-par(mar=c(2,2,2,2))
-vp=results_lncFARED2_SS
-with(vp, plot(logFC, -log10(FDR), pch=20, cex=0.3,main = 'MSTRG.28468', axes=FALSE))
-axis(side=2, at=c(0,150,300))
-axis(side=1, at=c(-5,0,5,10))
-with(subset(vp, logFC>1 & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="red"))
-with(subset(vp, logFC<(-1) & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="blue"))
-print(vp, newpage = FALSE)
-dev.off()
+results_lncFARED1_limits$logFC[results_lncFARED1_limits$logFC > upper_logFC_limit] = upper_logFC_limit
+results_lncFARED1_limits$logFC[results_lncFARED1_limits$logFC < lower_logFC_limit] = lower_logFC_limit
 ```
 
 ```{r}
-#volcano plot for lncFARED3 dataset
-par(pty="s") 
-vp=results_lncFARED3_SS
-with(vp, plot(logFC, -log10(FDR), pch=20, cex=0.3,main = 'lncFARED3'))
-with(subset(vp, logFC>1 & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="red"))
-with(subset(vp, logFC<(-1) & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="blue"))
+lncFARED1_vp=results_lncFARED1_limits
+
+#load list of genes to highlight
+highlight = read.delim("~/Desktop/200525_gene_highlight_list.txt", row.names = 1, header=TRUE)
+
+lncFARED1_vp_sub = subset(lncFARED1_vp, rownames(lncFARED1_vp) %in% rownames(highlight_lncFARED1))
+lncFARED1_vp_sub = subset(lncFARED1_vp_sub, abs(logFC)>log2(0) & FDR<0.01)
+lncFARED1_vp_sub = merge(x=lncFARED1_vp_sub, y=highlight_lncFARED1, by.x=0, by.y=0, all.x=TRUE)
+lncFARED1_vp_sub = lncFARED1_vp_sub[,2:15]
+
+lncFARED1_vp_plot = ggplot(lncFARED1_vp) +
+  geom_point(
+      data = lncFARED1_vp,
+      aes(x = logFC, y = logFDR),
+      alpha = 0.2,
+      color = "grey",
+      cex = 1
+    ) +
+  geom_point(
+      data = subset(lncFARED1_vp, abs(logFC)>log2(0) & FDR<0.01),
+      aes(x = logFC, y = logFDR),
+      alpha = 0.5,
+      color = "#20CBF8",
+      cex = 1
+    ) +
+  geom_point(
+      data = lncFARED1_vp_sub,
+      aes(x = logFC, y = logFDR),
+      fill = "#20CBF8",
+      color = "black",
+      pch = 21,
+      cex = 3
+    ) +
+    ylim(0,10) +
+    xlim(-6,6) +
+    theme_bw(base_size = 14) +
+    theme(axis.text = element_blank()) +
+    scale_y_continuous(breaks=c(0,5,10)) +
+    ylab("") +
+    xlab("")
+
+lncFARED1_vp_plot
+```
+
+####lncFARED4 volcano:
+```{r}
+#import revious analysis results
+results_lncFARED4 = read.delim("~/Desktop/190426_lncFARED4_edgeR_DEG.tsv", row.names = 1, header = TRUE)
 ```
 
 ```{r}
-#Save a pdf of the volcano plot
-setwd("~/Desktop")
-pdf("190806_lncFARED3_volcano_noHead.pdf", height=2.5, width=2.5)
-par(pty="s") 
-par(mar=c(2,2,2,2))
-vp=results_lncFARED3_SS
-with(vp, plot(logFC, -log10(FDR), pch=20, cex=0.3, axes=FALSE))
-axis(side=2, at=c(0,60,120))
-axis(side=1, at=c(-5,0,5,10))
-with(subset(vp, logFC>1 & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="red"))
-with(subset(vp, logFC<(-1) & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="blue"))
-print(vp, newpage = FALSE)
-dev.off()
+# set values outside axis limits to Inf
+upper_FDR_limit = 10
+upper_logFC_limit = 6
+lower_logFC_limit = -6
+
+results_lncFARED4_limits = results_lncFARED4
+results_lncFARED4_limits$logFDR = -log10(results_lncFARED4_limits$FDR)
+results_lncFARED4_limits$logFDR[results_lncFARED4_limits$logFDR > upper_FDR_limit] = Inf
+
+results_lncFARED4_limits$logFC[results_lncFARED4_limits$logFC > upper_logFC_limit] = upper_logFC_limit
+results_lncFARED4_limits$logFC[results_lncFARED4_limits$logFC < lower_logFC_limit] = lower_logFC_limit
 ```
 
 ```{r}
-#volcano plot for lncFARED4 dataset
-par(pty="s")
-vp=results_lncFARED4_SS
-with(vp, plot(logFC, -log10(FDR), pch=20, cex=0.3,main = 'lncFARED4'))
-with(subset(vp, logFC>1 & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="red"))
-with(subset(vp, logFC<(-1) & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="blue"))
+lncFARED4_vp=results_lncFARED4_limits
+
+#load list of genes to highlight
+highlight = read.delim("~/Desktop/200525_gene_highlight_list.txt", row.names = 1, header=TRUE)
+
+lncFARED4_vp_sub = subset(lncFARED4_vp, rownames(lncFARED4_vp) %in% rownames(highlight_lncFARED4))
+lncFARED4_vp_sub = subset(lncFARED4_vp_sub, abs(logFC)>log2(2) & FDR<0.01)
+lncFARED4_vp_sub = merge(x=lncFARED4_vp_sub, y=highlight_lncFARED4, by.x=0, by.y=0, all.x=TRUE)
+lncFARED4_vp_sub = lncFARED4_vp_sub[,2:15]
+
+lncFARED4_vp_plot = ggplot(lncFARED4_vp) +
+  geom_point(
+      data = lncFARED4_vp,
+      aes(x = logFC, y = logFDR),
+      alpha = 0.2,
+      color = "grey",
+      cex = 1
+    ) +
+  geom_point(
+      data = subset(lncFARED4_vp, abs(logFC)>log2(0) & FDR<0.01),
+      aes(x = logFC, y = logFDR),
+      alpha = 0.5,
+      color = "#FC2600",
+      cex = 1
+    ) +
+  geom_point(
+      data = lncFARED4_vp_sub,
+      aes(x = logFC, y = logFDR),
+      fill = "#FC2600",
+      color = "black",
+      pch = 21,
+      cex = 3
+    ) +
+    ylim(0,10) +
+    xlim(-6,6) +
+    theme_bw(base_size = 14) +
+    theme(axis.text = element_blank()) +
+    scale_y_continuous(breaks=c(0,5,10)) +
+    ylab("") +
+    xlab("")
+
+lncFARED4_vp_plot
+```
+
+####lncFARED3 volcano:
+```{r}
+#import revious analysis results
+results_lncFARED3 = read.delim("~/Desktop/190426_lncFARED3_edgeR_DEG.tsv", row.names = 1, header = TRUE)
 ```
 
 ```{r}
-#Save a pdf of the volcano plot
-setwd("~/Desktop")
-pdf("190806_lncFARED4_volcano.pdf", height=2.5, width=2.5)
-par(pty="s") 
-par(mar=c(2,2,2,2))
-vp=results_lncFARED4_SS
-with(vp, plot(logFC, -log10(FDR), pch=20, cex=0.3,main = 'lncFARED4', axes=FALSE))
-axis(side=2, at=c(0,70,140))
-axis(side=1, at=c(-5,0,5,10))
-with(subset(vp, logFC>1 & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="red"))
-with(subset(vp, logFC<(-1) & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="blue"))
-print(vp, newpage = FALSE)
-dev.off()
+# set values outside axis limits to Inf
+upper_FDR_limit = 10
+upper_logFC_limit = 6
+lower_logFC_limit = -6
+
+results_lncFARED3_limits = results_lncFARED3
+results_lncFARED3_limits$logFDR = -log10(results_lncFARED3_limits$FDR)
+results_lncFARED3_limits$logFDR[results_lncFARED3_limits$logFDR > upper_FDR_limit] = Inf
+
+results_lncFARED3_limits$logFC[results_lncFARED3_limits$logFC > upper_logFC_limit] = upper_logFC_limit
+results_lncFARED3_limits$logFC[results_lncFARED3_limits$logFC < lower_logFC_limit] = lower_logFC_limit
+
 ```
 
 ```{r}
-#volcano plot for lncFARED5 dataset
-par(pty="s") 
-vp=results_lncFARED5_SS
-with(vp, plot(logFC, -log10(FDR), pch=20, cex=0.3,main = 'lncFARED5'))
-with(subset(vp, logFC>1 & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="red"))
-with(subset(vp, logFC<(-1) & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="blue"))
+lncFARED3_vp=results_lncFARED3_limits
+
+#load list of genes to highlight
+highlight = read.delim("~/Desktop/200525_gene_highlight_list.txt", row.names = 1, header=TRUE)
+
+lncFARED3_vp_sub = subset(lncFARED3_vp, rownames(lncFARED3_vp) %in% rownames(highlight_lncFARED3))
+lncFARED3_vp_sub = subset(lncFARED3_vp_sub, abs(logFC)>log2(2) & FDR<0.01)
+lncFARED3_vp_sub = merge(x=lncFARED3_vp_sub, y=highlight_lncFARED3, by.x=0, by.y=0, all.x=TRUE)
+lncFARED3_vp_sub = lncFARED3_vp_sub[,2:15]
+
+lncFARED3_vp_plot = ggplot(lncFARED3_vp) +
+  geom_point(
+      data = lncFARED3_vp,
+      aes(x = logFC, y = logFDR),
+      alpha = 0.2,
+      color = "grey",
+      cex = 1
+    ) +
+  geom_point(
+      data = subset(lncFARED3_vp, abs(logFC)>log2(0) & FDR<0.01),
+      aes(x = logFC, y = logFDR),
+      alpha = 0.5,
+      color = "#20CBF8",
+      cex = 1
+    ) +
+  geom_point(
+      data = lncFARED3_vp_sub,
+      aes(x = logFC, y = logFDR),
+      fill = "#20CBF8",
+      color = "black",
+      pch = 21,
+      cex = 3
+    ) +
+    ylim(0,10) +
+    xlim(-6,6) +
+    theme_bw(base_size = 14) +
+    theme(axis.text = element_blank()) +
+    scale_y_continuous(breaks=c(0,5,10)) +
+    ylab("") +
+    xlab("")
+
+lncFARED3_vp_plot
+```
+
+####lncFARED5 volcano:
+```{r}
+#import revious analysis results
+
+results_lncFARED5 = read.delim("~/Desktop/190426_lncFARED5_edgeR_DEG.tsv", row.names = 1, header = TRUE)
 ```
 
 ```{r}
-#Save a pdf of the volcano plot
-setwd("~/Desktop")
-pdf("190806_lncFARED5_volcano.pdf", height=2.5, width=2.5)
-par(pty="s") 
-par(mar=c(2,2,2,2))
-vp=results_lncFARED5_SS
-with(vp, plot(logFC, -log10(FDR), pch=20, cex=0.3,main = 'MSTRG.12891', axes=FALSE))
-axis(side=2, at=c(0,150,300))
-axis(side=1, at=c(-5,0,5,10))
-with(subset(vp, logFC>1 & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="red"))
-with(subset(vp, logFC<(-1) & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="blue"))
-print(vp, newpage = FALSE)
-dev.off()
-```
+# set values outside axis limits to Inf
+upper_FDR_limit = 10
+upper_logFC_limit = 6
+lower_logFC_limit = -6
 
+results_lncFARED5_limits = results_lncFARED5
+results_lncFARED5_limits$logFDR = -log10(results_lncFARED5_limits$FDR)
+results_lncFARED5_limits$logFDR[results_lncFARED5_limits$logFDR > upper_FDR_limit] = Inf
 
-```{r}
-#volcano plot for lncFARED6 dataset
-par(pty="s") 
-vp=results_lncFARED6_SS
-with(vp, plot(logFC, -log10(FDR), pch=20, cex=0.3,main = 'lncFARED6'))
-with(subset(vp, logFC>1 & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="red"))
-with(subset(vp, logFC<(-1) & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="blue"))
+results_lncFARED5_limits$logFC[results_lncFARED5_limits$logFC > upper_logFC_limit] = upper_logFC_limit
+results_lncFARED5_limits$logFC[results_lncFARED5_limits$logFC < lower_logFC_limit] = lower_logFC_limit
+
 ```
 
 ```{r}
-#Save a pdf of the volcano plot
-setwd("~/Desktop")
-pdf("190806_lncFARED6_volcano.pdf", height=2.5, width=2.5)
-par(pty="s") 
-par(mar=c(2,2,2,2))
-vp=results_lncFARED6_SS
-with(vp, plot(logFC, -log10(FDR), pch=20, cex=0.3,main = 'lncFARED6', axes=FALSE))
-axis(side=2, at=c(0,130,260))
-axis(side=1, at=c(-5,0,5,10))
-with(subset(vp, logFC>1 & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="red"))
-with(subset(vp, logFC<(-1) & FDR<0.05 & 2^(logCPM)>1), points(logFC, -log10(FDR), pch=20,cex=0.3, col="blue"))
-print(vp, newpage = FALSE)
-dev.off()
+lncFARED5_vp=results_lncFARED5_limits
+
+#load list of genes to highlight
+highlight = read.delim("~/Desktop/200525_gene_highlight_list.txt", row.names = 1, header=TRUE)
+
+lncFARED5_vp_sub = subset(lncFARED5_vp, rownames(lncFARED5_vp) %in% rownames(highlight_lncFARED5))
+lncFARED5_vp_sub = subset(lncFARED5_vp_sub, abs(logFC)>log2(2) & FDR<0.05)
+lncFARED5_vp_sub = merge(x=lncFARED5_vp_sub, y=highlight_lncFARED5, by.x=0, by.y=0, all.x=TRUE)
+lncFARED5_vp_sub = lncFARED5_vp_sub[,2:15]
+
+lncFARED5_vp_plot = ggplot(lncFARED5_vp) +
+  geom_point(
+      data = lncFARED5_vp,
+      aes(x = logFC, y = logFDR),
+      color = "grey",
+      alpha = 0.2,
+      cex = 1
+    ) +
+  geom_point(
+      data = subset(lncFARED5_vp, abs(logFC)>log2(0) & FDR<0.05),
+      aes(x = logFC, y = logFDR),
+      alpha = 0.5,
+      color = "#AB46DC",
+      cex = 1
+    ) +
+  geom_point(
+      data = lncFARED5_vp_sub,
+      aes(x = logFC, y = logFDR),
+      fill = "#AB46DC",
+      color = "black",
+      pch = 21,
+      cex = 3
+    ) +
+    ylim(0,10) +
+    xlim(-6,6) +
+    theme_bw(base_size = 14) +
+    theme(axis.text = element_blank()) +
+    scale_y_continuous(breaks=c(0,5,10)) +
+    ylab("") +
+    xlab("")
+
+lncFARED5_vp_plot
+```
+
+```{r}
+#print all volcanos to one figure
+g = plot_grid(ncol = 2,
+          lncFARED1_vp_plot,
+          lncFARED4_vp_plot,
+          lncFARED3_vp_plot,
+          lncFARED5_vp_plot
+)
+g
 ```
